compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__custom_types__annotated_external_type.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/custom_types.rs
assertion_line: 10
expression: "\n@external(erlang, \"gleam_stdlib\", \"dict\")\npub type Dict(key, value)\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "gleam_stdlib", "dict")
pub type Dict(key, value)


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export_type([dict/2]).

-type dict(I, J) :: gleam_stdlib:dict(I, J).
