compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__custom_types__phantom.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/custom_types.rs
assertion_line: 5
expression: "pub type Map(k, v)"
snapshot_kind: text
---
----- SOURCE CODE
pub type Map(k, v)

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export_type([map_/2]).

-type map_(I, J) :: any() | {gleam_phantom, I, J}.
