compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__custom_types__unused_opaque_constructor_is_generated_correctly.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/custom_types.rs
assertion_line: 34
expression: "\ntype Wibble {\n  Wibble\n}\n\npub opaque type Wobble {\n  Wobble(Wibble)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  Wibble
}

pub opaque type Wobble {
  Wobble(Wibble)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export_type([wibble/0, wobble/0]).

-type wibble() :: wibble.

-opaque wobble() :: {wobble, wibble()}.
